--- a/map-maker.css
+++ b/map-maker.css
@@ -8,5 +8,10 @@
 }
 
 #hack { 
-    display: none;
+    max-width: 100px !important;
+    height: auto;
+}
+
+#houston {
+    max-width: 100px !important;
 }
